methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:32: error: Unmatched closing brace '}' ignored here
 }
 ^